# cfm_ffi

./: README_ffi.md  README_ffi_2.md  README_motivation.md  README_no_mangle.md  README_rust_ffi_python_projects.md  README_rust_python_resources.md  bench.md  benchmarks.txt  cfm.py  cfm_ffi.py  cfm_void_ptr_way.py  compression.py  sockets.md  steps_to_run.txt  sum_time.py
cfm_lib/: Cargo.toml
cfm_lib/src/: README.md  auth_beaver_triples.rs  cfm_init_protocol.rs  cfm_protocol.rs  comparison.rs  constants.rs  dlog_proof.rs  errors.rs  lib.rs  lib_void_ptr_way.rs  proto.rs  psc_protocol.rs  psit_protocol.rs  utils.rs
cfm_lib/src/sl_oblivious/: constants.rs  endemic_ot.rs  mod.rs  params.rs  rvole.rs
cfm_lib/src/sl_oblivious/soft_spoken/: all_but_one.rs  mul_poly.rs  soft_spoken_ot.rs
