[package]
name = "cfm_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"] }
rand = "0.8.5"
merlin = "3.0.0"
subtle = "2.5"
thiserror = "1.0.61"
rand_core = "0.6.4"
crypto-bigint = { version = "0.5.5", features = ["extra-sizes", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_arrays = { version = "0.1"}
bytemuck = { version = "1.14.1", features = [ "derive", "min_const_generics", "extern_crate_alloc" ] }
zeroize = "1.6.1"
bincode = "1.3.3"
serde_json = "1.0.139"
serde_cbor = "0.11.2"
libc = "0.2.169"
hex = "0.4"
rayon = "1.10.0"

[lib]
crate-type = ["rlib", "cdylib"]
